--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+body{
+    background-color: #FFFBE6;
+}
+nav{
+    background-color: #00712D;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;     /* IE & Edge */
+  scrollbar-width: none;        /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;                /* Chrome, Safari */
+}
