--- a/src/app/personal-user-dashboard/userdashboard/userdashboard.html
+++ b/src/app/personal-user-dashboard/userdashboard/userdashboard.html
@@ -14,6 +14,7 @@
         </div>
 
         <div class="w-full lg:flex-1 max-w-[650px] bg-white p-4 mx-auto rounded-xl shadow-md ">
+            <h2 class="text-xl font-semibold">Vehicle Location</h2>
         </div>
     </section>
 
